Update SIMDGap.java