@@ -1,19 +1,15 @@
 package primegap.naive;
 
-import java.io.IOException;
-import java.lang.management.ManagementFactory;
-import java.lang.management.RuntimeMXBean;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 import jdk.incubator.vector.ByteVector;
 import jdk.incubator.vector.VectorOperators;
 import jdk.incubator.vector.VectorSpecies;
+import primegap.util.Machine;
 
 public class SIMDGap extends NaiveGap {
 	/**
@@ -328,50 +324,8 @@ public class SIMDGap extends NaiveGap {
 				.findFirst()//
 				.orElseThrow();
 	}
-
-	/**
-	 * Relaunches the current JVM process with --add-modules=jdk.incubator.vector
-	 * appended, forwarding all existing JVM arguments and the main class args.
-	 * Inherits stdin/stdout/stderr so output appears normally.
-	 */
-	static {
-		// Check if the Vector API incubator module is already loaded
-		if (!ModuleLayer.boot().findModule("jdk.incubator.vector").isPresent()) {
-			// Resolve the current java executable path
-			String javaExe = ProcessHandle.current().info().command().orElse("java");
-
-			RuntimeMXBean jvmMeta = ManagementFactory.getRuntimeMXBean();
-
-			List<String> cmd = new ArrayList<>();
-			cmd.add(javaExe);
-
-			// Inject the missing module flag first
-			cmd.add("--add-modules=jdk.incubator.vector");
-
-			// Forward all existing JVM flags (-Xmx, -Xms, -D... etc.)
-			cmd.addAll(jvmMeta.getInputArguments());
-
-			// Forward classpath
-			cmd.add("-cp");
-			cmd.add(jvmMeta.getClassPath());
-
-			// Main class and its arguments
-			String[] parts = Optional.ofNullable(System.getProperty("sun.java.command"))
-					.orElseGet(() -> Arrays.asList(new Exception().getStackTrace()).getLast().getClassName())
-					.split(" ");
-			cmd.addAll(Arrays.asList(parts));
-
-			// Launch child process, sharing all I/O with current process
-			try {
-				int exitCode = new ProcessBuilder(cmd).inheritIO().start().waitFor();
-				System.exit(exitCode);
-			} catch (InterruptedException | IOException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
-			// Mirror the child exit code
-		}
-	}
+	
+	static boolean simdEnabled = Machine.enableSIMD();
 
 	public static void main(String[] args) throws Exception {
 		new SIMDGap().run();
